--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+
+
+*{
+  margin: 0;
+}
 #header ul{
   display: flex;
   float: right;
@@ -7,38 +12,15 @@
   list-style: none;
 }
 #header a{
-text-decoration: none;
-color: black;
-}
-
-#hero {
-  width: 100%;
-  height: 100vh; /* view Port Height */ 
-  background: url("../img/fundo\ ritmo.jpg") bottom;
-  /* Criar img na I.A. */
-  background-size: cover;
-  position: relative;
-  margin: 0;
-}
-
-nav {
-  position: absolute;
-  top: 0;
-  width: 100%;
-   /* fundo semitransparente */
-  padding: 20px;
-  z-index: 10;
-}
-
-nav ul {
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-  list-style: none;
-}
-
-nav a {
-  color: white;
   text-decoration: none;
-  font-weight: bold;
+  color: rgb(255, 255, 255);
+}
+#hero{
+  height: 35rem;
+  width: 90rem;
+  background-color: #400106;
+}
+body{
+  background-color: #e9dcb1;
+  overflow-x: hidden;
 }
