--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,138 @@
+/* titulo */
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300..700;1,300..700&family=Edu+QLD+Beginner:wght@400..700&display=swap');
+
+/* textos */
+
+@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Cormorant+Infant:ital,wght@0,300..700;1,300..700&family=Edu+QLD+Beginner:wght@400..700&display=swap');
 
 
-*{
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-#header ul{
-  display: flex;
-  float: right;
-}
-#header li{
-  margin: 30px;
-  list-style: none;
-}
-#header a{
-  text-decoration: none;
-  color: rgb(255, 255, 255);
-}
-#hero{
-  height: 35rem;
-  width: 90rem;
-  background-color: #400106;
-}
-body{
+
+body {
   background-color: #e9dcb1;
   overflow-x: hidden;
+  font-family: Arial, sans-serif;
 }
+
+#hero {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+}
+
+.fundo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.fundo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(50%);
+}
+
+/* Navegação */
+#header {
+  position: relative;
+  z-index: 2;
+  padding: 30px;
+  background-color: rgb(65, 17, 17);
+  height: 30px;
+}
+
+#header ul {
+  display: flex;
+  justify-content: flex-end;
+  gap: 30px;
+}
+
+#header li {
+  list-style: none;
+  
+}
+
+#header a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+ margin: 20px;
+ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+
+.texto-hero {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  text-align: center;
+  color: white;
+}
+
+.texto-hero h1 {
+  font-size: 70px;
+  margin-bottom: 10px;
+  font-family:Edu QLD Beginner;
+
+}
+.texto-hero span{
+  font-size: 70px;
+}
+
+.texto-hero p {
+  font-size: 1.5rem;
+  font-family:Cormorant Infantil;
+  margin-top: 20px;
+}
+.moda h1{
+  text-align: center;
+  margin-top: 30px;
+  font-family: Edu QLD Beginner;
+  font-size: 40px;
+  color: rgb(89, 27, 27);
+}
+.moda p{
+  margin-top: 25px;
+  text-align: center;
+  font-size: 20px;
+}
+#estilos .tema{
+  display: flex;
+  justify-content: center;
+  
+}
+
+.atual{
+  background-color: aliceblue;
+  height: 250px;
+  width: 250px;
+  margin: 30px;
+  border-radius: 10%;
+}
+
+.looks{
+  background-color: rgb(255, 255, 255);
+  height: 250px;
+  width: 250px;
+  margin: 30px;
+    border-radius: 10%;
+}
+.avaliaçoes{
+    background-color: rgb(255, 254, 252);
+  height: 250px;
+  width: 250px;
+  margin: 30px;
+    border-radius: 10%;
+}
+
