--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body {
   margin-top: 30px;
   font-family: Edu QLD Beginner;
   font-size: 40px;
-  color: rgb(89, 27, 27);
+  color: #591b1b;
 }
 .moda p{
   margin-top: 25px;
@@ -136,3 +136,81 @@ body {
     border-radius: 10%;
 }
 
+#estilos .atual {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;    
+  padding-top: 90px;      
+}
+
+#estilos .atual li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#estilos .atual i {
+  color: #591b1b;
+  font-size: 50px;
+  margin-bottom: 10px;
+}
+
+#estilos .atual p {
+  margin: 0;
+  font-size: 18px;
+  color: #591b1b;
+  margin-top: 20px;
+}
+/* looks */
+#estilos .looks {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;    
+  padding-top: 90px;      
+}
+
+#estilos .looks li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#estilos .looks i {
+  color: #591b1b;
+  font-size: 50px;
+  margin-bottom: 10px;
+}
+
+#estilos .looks p {
+  margin: 0;
+  font-size: 18px;
+  color: #591b1b;
+  margin-top: 20px;
+}
+
+/* avaliaçoes */
+#estilos .avaliaçoes {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;    
+  padding-top: 90px;      
+}
+
+#estilos .avaliaçoes li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#estilos .avaliaçoes i {
+  color: #591b1b;
+  font-size: 50px;
+  margin-bottom: 10px;
+}
+
+#estilos .avaliaçoes p {
+  margin: 0;
+  font-size: 18px;
+  color: #591b1b;
+  margin-top: 20px;
+}
